--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon index.js"
+  },
   "dependencies": {
     "axios": "^0.15.3",
     "body-parser": "^1.15.2",
@@ -6,6 +9,7 @@
     "codemirror": "^5.22.0",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "filesize": "^3.3.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "mjml": "^3.1.1",
@@ -31,10 +35,12 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
+    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "ignore-styles": "^5.0.1",
     "node-sass": "^4.1.1",
+    "nodemon": "^1.11.0",
     "postcss-loader": "^1.2.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.1.1",
