--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "6.9.x"
+  },
   "scripts": {
     "build": "webpack --config webpack/build.config.babel.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
@@ -51,7 +54,7 @@
     "style-loader": "^0.13.1",
     "webpack": "2.2.0-rc.3",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.14.0",
+    "webpack-hot-middleware": "^2.15.0",
     "webpack-merge": "^2.0.0",
     "webpack-stats-plugin": "^0.1.4"
   }
