Add github signin

--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "codemirror": "^5.22.0",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "filesize": "^3.3.0",
+    "github": "^7.2.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "mjml": "^3.1.1",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-motion": "^0.4.7",
     "react-redux": "^5.0.1",
     "react-router": "^4.0.0-alpha.6",
-    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-actions": "^1.2.0",
     "redux-thunk": "^2.1.0",
     "ress": "^1.1.2",
     "shortid": "^2.2.6"
