--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.5",
     "codemirror": "^5.22.0",
     "compression": "^1.6.2",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "filesize": "^3.3.0",
