--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "redux-actions": "^1.2.0",
     "redux-thunk": "^2.1.0",
     "ress": "^1.1.2",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "socket.io": "^1.7.2",
+    "socket.io-client": "^1.7.2",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.0",
