--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "shortid": "^2.2.6",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
+    "superagent": "^3.3.1",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
