--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "no-empty": 0,
   },
   "globals": {
+    "Promise": false,
     "__BROWSER__": false,
     "__DEBUG__": false,
     "__ENV__": false,
