--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-motion": "^0.4.7",
     "react-redux": "^5.0.1",
     "react-router": "^4.0.0-alpha.6",
+    "react-router-addons-routes": "^0.0.3",
     "react-steack": "^1.2.0",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.0",
