--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   },
   "globals": {
     "Promise": false,
+    "__API_URL__": false,
     "__BROWSER__": false,
     "__DEBUG__": false,
     "__ENV__": false,
