--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-github2": "^0.1.10",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-mortal": "^2.0.0",
     "react-motion": "^0.4.7",
     "react-redux": "^5.0.1",
     "react-router": "^4.0.0-alpha.6",
