remove file from gist

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "operator-linebreak": 0,
     "react/jsx-boolean-value": 0,
     "no-empty": 0,
+    "id-length": 0,
   },
   "globals": {
     "Promise": false,
