--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "heroku-postbuild": "NODE_ENV=production npm run build",
     "start": "cross-env NODE_ENV=production node index.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "pm2:setup": "pm2 deploy ecosystem.json production setup",
+    "deploy": "pm2 deploy ecosystem.json production"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -65,6 +67,7 @@
     "ignore-styles": "^5.0.1",
     "node-sass": "^4.3.0",
     "nodemon": "^1.11.0",
+    "pm2": "^2.2.3",
     "postcss-loader": "^1.2.2",
     "progress-bar-webpack-plugin": "^1.9.2",
     "react-hot-loader": "^3.0.0-beta.6",
